# animal-rescue-django

./: .gitignore  pyproject.toml
project/: db.sqlite3  requirements.txt
project/animal/: admin.py  models.py  schema.py
project/config/: local_settings.py  schema.py  settings.py  urls.py
project/config/static/core/css/: style.css  style.css.map  style.scss
project/core/libs/: core_libs.py
project/docs/source/: conf.py  index.rst
project/messenger/: admin.py  models.py
project/project/: settings.py  urls.py
project/scripts/: clear_db.sh
project/templates/core/: index.html
project/user/: admin.py  models.py  schema.py
