[tool.poetry]
name = "animal-rescue-django"
version = "0.1.0"
description = "Animal Rescue App Backend"
authors = ["Alicia Schonefeld <schonefeld.dev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.6"
Pillow = "^8.1.0"
graphene-django = "^2.15.0"
django-cors-headers = "^3.7.0"
django-location-field = "^2.1.0"
python-decouple = "^3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
